--- a/app/src/main/res/layout/activity_candidate_list.xml
+++ b/app/src/main/res/layout/activity_candidate_list.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cloudsherpas.kandidatos.CandidateListActivity">
+    tools:context=".candidate.CandidateListActivity">
 
     <GridView
         android:id="@+id/candidateGrid"
