--- a/app/src/main/res/layout/activity_candidate_profile.xml
+++ b/app/src/main/res/layout/activity_candidate_profile.xml
@@ -13,7 +13,8 @@
         android:orientation="horizontal"
         android:elevation="2dp"
         android:id="@+id/linearLayout"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:clickable="true">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
