--- a/app/src/main/res/layout/candidate_list_item.xml
+++ b/app/src/main/res/layout/candidate_list_item.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="160dp"
+    android:padding="2dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/candidateListImage"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:padding="5dp" />
+        android:scaleType="centerCrop"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Candidate"
+        android:padding="5dp"
+        android:id="@+id/itemText"
+        android:textColor="#ffffff"
+        android:background="#66000000"
+        android:layout_gravity="left|bottom"/>
 
-</RelativeLayout>
+</FrameLayout>
