--- a/app/src/main/res/layout/activity_candidate_profile.xml
+++ b/app/src/main/res/layout/activity_candidate_profile.xml
@@ -5,6 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:clipToPadding="false"
+    android:background="#B0BEC5"
     tools:context="com.cloudsherpas.kandidatos.profile.CandidateProfileActivity">
 
     <LinearLayout
