Added new data on DAO.

--- a/app/src/main/res/layout/activity_candidate_profile.xml
+++ b/app/src/main/res/layout/activity_candidate_profile.xml
@@ -39,5 +39,13 @@
             android:layout_below="@+id/linearLayout"
             android:background="#ffffff"
             android:layout_marginTop="1dp" />
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/profileChart"/>
     </RelativeLayout>
 </ScrollView>
