--- a/app/src/main/res/layout/activity_candidate_profile.xml
+++ b/app/src/main/res/layout/activity_candidate_profile.xml
@@ -1,6 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -14,7 +15,7 @@
             android:layout_height="200dp"
             android:orientation="vertical"
             android:elevation="2dp"
-            android:id="@+id/linearLayout"
+            android:id="@+id/profileHeader"
             android:background="#ffffff"
             android:clickable="true">
             <ImageView
@@ -31,14 +32,29 @@
                 android:id="@+id/candidateProfileName"/>
         </FrameLayout>
 
-        <com.github.mikephil.charting.charts.RadarChart
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/profileHeader"
+            android:background="#ffffff"
+            android:elevation="2dp"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_below="@id/tab_layout"
+            android:paddingTop="4dp"/>
+
+        <!--<com.github.mikephil.charting.charts.RadarChart
             android:id="@+id/profileChart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:elevation="2dp"
-            android:layout_below="@+id/linearLayout"
             android:background="#ffffff"
             android:layout_marginTop="1dp" />
+        -->
 
         <ListView
             android:layout_width="wrap_content"
@@ -46,6 +62,9 @@
             android:id="@+id/listView"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/profileChart"/>
+            android:layout_below="@+id/tab_layout"/>
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/pager"/>
     </RelativeLayout>
 </ScrollView>
