--- a/app/src/main/res/layout/biography_fragment.xml
+++ b/app/src/main/res/layout/biography_fragment.xml
@@ -16,74 +16,107 @@
         android:background="#ffffff"
         android:elevation="2dp"
         android:id="@+id/linearLayout">
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/imageView"
-        android:layout_weight="3"/>
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="7">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            android:gravity="left"
+            android:paddingLeft="10dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Small Text"
                 android:id="@+id/textView2"
-                android:layout_weight="4" />
+                android:textColor="#000" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
                 android:id="@+id/textView3"
-                android:layout_weight="1" />
+                android:textColor="#000" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
                 android:id="@+id/textView4"
-                android:layout_weight="1" />
+                android:textColor="#000" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
                 android:id="@+id/textView5"
-                android:layout_weight="1"
                 android:elegantTextHeight="true"
-                android:textStyle="italic"/>
+                android:textStyle="italic"
+                android:textColor="#000" />
 
         </LinearLayout>
-
 
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout"
         android:layout_centerHorizontal="true"
         android:elevation="2dp"
         android:background="#ffffff"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:paddingLeft="10dp">
 
-        <ListView
-            android:id="@+id/list"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
-        </ListView>
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/schools"
+            android:layout_weight="1"
+            android:elegantTextHeight="true"
+            android:textStyle="italic"
+            android:textColor="#000" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/positions"
+            android:layout_weight="1"
+            android:elegantTextHeight="true"
+            android:textStyle="italic"
+            android:textColor="#000" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/bills"
+            android:layout_weight="1"
+            android:elegantTextHeight="true"
+            android:textStyle="italic"
+            android:textColor="#000" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/awards"
+            android:layout_weight="1"
+            android:elegantTextHeight="true"
+            android:textStyle="italic"
+            android:textColor="#000" />
 
     </LinearLayout>
-
 
 </RelativeLayout>
