--- a/app/src/main/res/layout/activity_candidate_list.xml
+++ b/app/src/main/res/layout/activity_candidate_list.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8EAF6"
     tools:context=".candidate.CandidateListActivity">
 
     <GridView
         android:id="@+id/candidateGrid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:numColumns="2">
+        android:numColumns="2"
+        >
     </GridView>
 </RelativeLayout>
