--- a/app/src/main/res/layout/biography_fragment.xml
+++ b/app/src/main/res/layout/biography_fragment.xml
@@ -82,8 +82,7 @@
             android:id="@+id/schools"
             android:layout_weight="1"
             android:elegantTextHeight="true"
-            android:textStyle="italic"
-            android:textColor="#000" />
+            android:textStyle="italic" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -93,8 +92,7 @@
             android:id="@+id/positions"
             android:layout_weight="1"
             android:elegantTextHeight="true"
-            android:textStyle="italic"
-            android:textColor="#000" />
+            android:textStyle="italic" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -103,8 +101,7 @@
             android:id="@+id/bills"
             android:layout_weight="1"
             android:elegantTextHeight="true"
-            android:textStyle="italic"
-            android:textColor="#000" />
+            android:textStyle="italic" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -114,8 +111,7 @@
             android:id="@+id/awards"
             android:layout_weight="1"
             android:elegantTextHeight="true"
-            android:textStyle="italic"
-            android:textColor="#000" />
+            android:textStyle="italic" />
 
     </LinearLayout>
 
