Modify layout design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#C62828</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#283593</color>
+    <color name="colorAccent">#2962FF</color>
 </resources>
