--- a/app/src/main/res/layout/biography_fragment.xml
+++ b/app/src/main/res/layout/biography_fragment.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -21,9 +21,9 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="7"
             android:gravity="left"
-            android:paddingLeft="10dp">
+            android:paddingLeft="10dp"
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -55,7 +55,6 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
                 android:id="@+id/textView5"
-                android:elegantTextHeight="true"
                 android:textStyle="italic"
                 android:textColor="#000" />
 
@@ -72,7 +71,7 @@
         android:elevation="2dp"
         android:background="#ffffff"
         android:layout_marginTop="5dp"
-        android:paddingLeft="10dp">
+        android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
